RESOLVED FIXED260655
When stopped, a cloned MediaStreamTrack will stop its base MediaStreamTrack if the source is muted
https://bugs.webkit.org/show_bug.cgi?id=260655
Summary When stopped, a cloned MediaStreamTrack will stop its base MediaStreamTrack i...
youenn fablet
Reported 2023-08-24 05:29:33 PDT
Attachments
youenn fablet
Comment 1 2023-08-24 05:36:01 PDT
EWS
Comment 2 2023-08-24 14:30:29 PDT
Committed 267247@main (fc3228ea6a4e): <https://commits.webkit.org/267247@main> Reviewed commits have been landed. Closing PR #17011 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.