Source/WebKit/UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp
@@ -112,6 +112,7 @@ public:
     void end()
     {
         m_isStopped = true;
+        m_isEnded = true;
         m_source->requestToEnd(*this);
     }
 
@@ -280,10 +281,10 @@ private:
         return m_rotationSession->rotate(videoFrame, rotation, ImageRotationSessionVT::IsCGImageCompatible::No);
     }
 
-    bool preventSourceFromStopping()
+    bool preventSourceFromEnding()
     {
-        // Do not allow the source to stop if we are still using it.
-        return !m_isStopped;
+        // Do not allow the source to end if we are still using it.
+        return !m_isEnded;
     }
 
     RealtimeMediaSourceIdentifier m_id;
@@ -294,6 +295,7 @@ private:
     std::unique_ptr<ProducerSharedCARingBuffer> m_ringBuffer;
     std::optional<CAAudioStreamDescription> m_description;
     bool m_isStopped { false };
+    bool m_isEnded { false };
     std::unique_ptr<ImageRotationSessionVT> m_rotationSession;
     bool m_shouldApplyRotation { false };
     std::unique_ptr<IPC::Semaphore> m_captureSemaphore;
